--- a/03.25.19/classwork/index.html
+++ b/03.25.19/classwork/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="main2.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     
