--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>PERSONAL DATA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css">
-    <script src="./js/event.js" defer></script>
+    <script src="./js/main.js" defer></script>
 </head>
 
 <body>
