--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -22,18 +22,22 @@
                 <input class="input__field" type=text name=textField__age size=25>
                 <div class="form__titles">Sex:</div>
                 <input class="input__field" type=text name=textField__sex size=25>
+                <div></div>
                 <input class="button" type="button" value="Show personal data">
             </form>
             <h1 class="main__title">Personal data:</h1>
-            <article class="content__area">
-                <div class="article__titles">Name:</div>
-                <div class="article__content_name"></div>
-                <div class="article__titles">Surname:</div>
-                <div class="article__content_surname"></div>
-                <div class="article__titles">Age:</div>
-                <div class="article__content_age"></div>
-                <div class="article__titles">Sex:</div>
-                <div class="article__content_sex"></div>
+            <article class="person-info">
+                <div class="person-info__field">Name:</div>
+                <div class="person-info__name"></div>
+
+                <div class="person-info__field">Surname:</div>
+                <div class="person-info__surname"></div>
+
+                <div class="person-info__field">Age:</div>
+                <div class="person-info__age"></div>
+
+                <div class="person-info__field">Sex:</div>
+                <div class="person-info__sex"></div>
             </article>
         </section>
     </main>
