--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -31,6 +31,10 @@
                     <input class="input__field" type=text name="sex" id="sex">
                 </div>
                 <div class="form__elements">
+                    <label class="form__elements-label" for="children">Children:</label>
+                    <input class="input__field" type=text name="children" id="children">
+                </div>
+                <div class="form__elements">
                     <input class="button" type="button" value="Show personal data">
                 </div>
             </form>
@@ -44,6 +48,8 @@
                 <div class="person-info__age"></div>
                 <div class="person-info__field">Sex:</div>
                 <div class="person-info__sex"></div>
+                <div class="person-info__field">Children:</div>
+                <div class="person-info__children"></div>
             </article>
         </section>
     </main>
