--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -19,7 +19,7 @@
                     <input class="input__field" type=text name="name" id="name">
                 </div>
                 <div class="form__elements">
-                    <label class="form__elements-label" class="form__elements-label for=" surname">Surname:</label>
+                    <label class="form__elements-label" for="surname">Surname:</label>
                     <input class="input__field" type=text name="surname" id="surname">
                 </div>
                 <div class="form__elements">
