--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -30,10 +30,21 @@
                     <label class="form__elements-label" for="sex">Sex:</label>
                     <input class="input__field" type=text name="sex" id="sex">
                 </div>
+
                 <div class="form__elements">
+                    <label class="form__elements-label" for="offspring">Offspring?:</label>
+                    <input class="input__field" type="checkbox" name="offspring" id="offspring">
+                </div>
+                <div class="form__elements-amount">
+                    <label class="form__elements-label" for="childrenamount">Now many?:</label>
+                    <input class="input__field--small" type="number" min="1" name="childrenamount" id="childrenamount">
+                </div>
+
+                <!-- <div class="form__elements">
                     <label class="form__elements-label" for="children">Children:</label>
                     <input class="input__field" type=text name="children" id="children">
-                </div>
+                </div> -->
+
                 <div class="form__elements">
                     <input class="button" type="button" value="Show personal data">
                 </div>
