--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -40,7 +40,7 @@
                     <input class="input__field--small" type="number" min="1" name="childrenamount" id="childrenamount">
                 </div>
 
-                <!-- <div class="form__elements">
+                <!-- <div class="form__elements-childrenamount">
                     <label class="form__elements-label" for="children">Children:</label>
                     <input class="input__field" type=text name="children" id="children">
                 </div> -->
