--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -39,14 +39,12 @@
                     <label class="form__elements-label" for="childrenamount">Now many?:</label>
                     <input class="input__field--small" type="number" min="1" name="childrenamount" id="childrenamount">
                 </div>
-
                 <!-- <div class="form__elements-childrenamount">
                     <label class="form__elements-label" for="children">Children:</label>
                     <input class="input__field" type=text name="children" id="children">
                 </div> -->
-
                 <div class="form__elements">
-                    <input class="button" type="button" value="Show personal data">
+                    <input class="button" type="button" value="Show personal data" id="button">
                 </div>
             </form>
             <h1 class="main__title">Personal data:</h1>
