--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -43,10 +43,13 @@
                     <label class="form__elements-label" for="children">Children:</label>
                     <input class="input__field" type=text name="children" id="children">
                 </div> -->
-                <div class="form__elements" id="button-div">
-                    <input class="button" type="button" value="Show personal data" id="button">
+                <div class="form__elements" id="div__button-save">
+                    <input class="button" type="button" value="Save personal data" id="button-save">
                 </div>
             </form>
+            <div class="form__elements" id="div__button-show">
+                <input class="button" type="button" value="Show personal data" id="button-show">
+            </div>
             <h1 class="main__title">Personal data:</h1>
             <article class="person-info">
                 <div class="person-info__field">Name:</div>
