--- a/04.01.19/homework/index.html
+++ b/04.01.19/homework/index.html
@@ -44,7 +44,7 @@
                 </div>
             </form>
             <div class="form__elements" id="div__button-show">
-                <input class="button" type="button" value="Show personal data" id="button-show">
+                <input class="button_show" type="button" value="Show personal data" id="button-show">
             </div>
             <h1 class="main__title">Personal data:</h1>
             <article class="person-info">
