--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -28,7 +28,7 @@
 
 <body>
 	<div class="container">
-		<h2 class="noDisplay">Main Content</h2>
+		<h2 class="noDisplay">Main Content here</h2>
 		<main class="flex-wrapper">
 			<div class="flex_item_white">
 			</div>
