--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -23,6 +23,7 @@
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
+	<script src="js/gauge.min.js" defer></script>
 	<script src="js/main.js" defer></script>
 </head>
 
@@ -46,6 +47,9 @@
 					<div class="flex_instrument_03">
 						<div class="pointer_03"><i class="fa fa-long-arrow-alt-down"></i></div>
 					</div>
+					<canvas id="gauge_temperature"></canvas>
+					<canvas id="gauge_pressure"></canvas>
+					<canvas id="gauge_humidity"></canvas>
 				</div>
 				<div class="flex_item_weather_data">
 					<section class="contentwrap">
