--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -38,7 +38,7 @@
 					<div class="content_weather_city"></div>
 				</div>
 				<div class="flex_item_instruments">
-					<div class="flex_instrument_01">
+					<!-- <div class="flex_instrument_01">
 						<div class="pointer_01"><i class="fa fa-long-arrow-alt-down"></i></div>
 					</div>
 					<div class="flex_instrument_02">
@@ -46,7 +46,7 @@
 					</div>
 					<div class="flex_instrument_03">
 						<div class="pointer_03"><i class="fa fa-long-arrow-alt-down"></i></div>
-					</div>
+					</div> -->
 					<canvas id="gauge_pressure"></canvas>
 					<canvas id="gauge_temperature"></canvas>
 					<canvas id="gauge_humidity"></canvas>
