proposed menu rev

--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -51,7 +51,7 @@
 							</div>
 							<button class="button" type="button" id="button-save"><i class="fas fa-search"></i></button>
 						</form>
-						<div id="menu-cities" style="display: block;">
+						<div class="menu-proposed-cities" id="menu-proposed-cities">
 							<div class="menu-body">
 								<ul class="menu-items">
 									<li>
