--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -63,10 +63,10 @@
 							<div class="city-info__pressure"></div>
 							<div class="city-info__field">Humidity:</div>
 							<div class="city-info__humidity"></div>
-							<div class="city-info__field">Temp min:</div>
+							<!-- <div class="city-info__field">Temp. Summary Min:</div>
 							<div class="city-info__temp_min"></div>
-							<div class="city-info__field">Temp max:</div>
-							<div class="city-info__temp_max"></div>
+							<div class="city-info__field">Temp. Summary Max:</div>
+							<div class="city-info__temp_max"></div> -->
 						</article>
 					</section>
 				</div>
