--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -49,7 +49,7 @@
 								<label class="form__elements-label" for="name">City:</label>
 								<input class="input__field" type="text" name="name" id="city__name">
 							</div>
-							<button class="button" type="button" id="button-save"><i class="fas fa-search"></i></button>
+							<button class="button" type="button" id="button-search"><i class="fas fa-search"></i></button>
 						</form>
 						<div class="menu-proposed-cities" id="menu-proposed-cities">
 						</div>
