--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!--	<meta name="viewport" content="width=device-width, initial-scale=1">-->
 	<meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=yes">
 	<title>Weather Online</title>
