layout temp min temp max

--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -59,14 +59,14 @@
 							<div class="city-info__name"></div>
 							<div class="city-info__field">Temp:</div>
 							<div class="city-info__temp"></div>
+							<div class="city-info__field">Temp. Summary Min:</div>
+							<div class="city-info__temp_min"></div>
+							<div class="city-info__field">Temp. Summary Max:</div>
+							<div class="city-info__temp_max"></div>
 							<div class="city-info__field">Pressure:</div>
 							<div class="city-info__pressure"></div>
 							<div class="city-info__field">Humidity:</div>
 							<div class="city-info__humidity"></div>
-							<!-- <div class="city-info__field">Temp. Summary Min:</div>
-							<div class="city-info__temp_min"></div>
-							<div class="city-info__field">Temp. Summary Max:</div>
-							<div class="city-info__temp_max"></div> -->
 						</article>
 					</section>
 				</div>
