--- a/04.18.19/homework/weather/index.html
+++ b/04.18.19/homework/weather/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<!--	<meta name="viewport" content="width=device-width, initial-scale=1">-->
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->
 	<meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=yes">
 	<title>Weather Online</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -23,12 +23,13 @@
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
-	<script src="js/main.js" defer></script>
+	<script defer src="js/gauge.min.js"></script>
+	<script defer src="js/main.js"></script>
 </head>
 
 <body>
 	<div class="container">
-		<h2 class="noDisplay">Main Content</h2>
+		<h2 class="noDisplay">Main Content here</h2>
 		<main class="flex-wrapper">
 			<div class="flex_item_white">
 			</div>
@@ -37,29 +38,21 @@
 					<div class="content_weather_city"></div>
 				</div>
 				<div class="flex_item_instruments">
-					<div class="flex_instrument_01">
-						<div class="pointer_01"><i class="fa fa-long-arrow-alt-down"></i></div>
-					</div>
-					<div class="flex_instrument_02">
-						<div class="pointer_02"><i class="fa fa-long-arrow-alt-down"></i></div>
-					</div>
-					<div class="flex_instrument_03">
-						<div class="pointer_03"><i class="fa fa-long-arrow-alt-down"></i></div>
-					</div>
+					<canvas id="gauge_pressure"></canvas>
+					<canvas id="gauge_temperature"></canvas>
+					<canvas id="gauge_humidity"></canvas>
 				</div>
 				<div class="flex_item_weather_data">
 					<section class="contentwrap">
 						<form class="form">
 							<div class="form__elements">
+								<label class="form__elements-gpslabel"></label>
 								<label class="form__elements-label" for="name">City:</label>
-								<input class="input__field" type="text" name="name" id="name">
+								<input class="input__field" type="text" name="name" id="city__name">
 							</div>
-							<div class="form__elements" id="div__button-save">
-								<input class="button" type="button" value="Do query by city name" id="button-save">
-							</div>
+							<button class="button" type="button" id="button-search"><i class="fas fa-search"></i></button>
 						</form>
-						<div class="form__elements" id="div__button-show">
-							<input class="button_show" type="button" value="What is Weather?" id="button-show">
+						<div class="menu-proposed-cities" id="menu-proposed-cities">
 						</div>
 						<h1 class="main__title">weather data</h1>
 						<article class="city-info">
@@ -67,14 +60,14 @@
 							<div class="city-info__name"></div>
 							<div class="city-info__field">Temp:</div>
 							<div class="city-info__temp"></div>
+							<div class="city-info__field">Temp. Summary Min:</div>
+							<div class="city-info__temp_min"></div>
+							<div class="city-info__field">Temp. Summary Max:</div>
+							<div class="city-info__temp_max"></div>
 							<div class="city-info__field">Pressure:</div>
 							<div class="city-info__pressure"></div>
 							<div class="city-info__field">Humidity:</div>
 							<div class="city-info__humidity"></div>
-							<div class="city-info__field">Temp min:</div>
-							<div class="city-info__temp_min"></div>
-							<div class="city-info__field">Temp max:</div>
-							<div class="city-info__temp_max"></div>
 						</article>
 					</section>
 				</div>
